Hide overflow in CoffeeBlendInfoPanels to prevent entire page scroll

--- a/packages/frontend/src/features/CoffeeBlendInfoPanels/index.module.css
+++ b/packages/frontend/src/features/CoffeeBlendInfoPanels/index.module.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
 
+    overflow: hidden;
+
     width: min(calc(var(--vw) * 100), 100%);
     padding: 32px 0px;
 }
